k8s-ingress/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-gcp
  name: hello-gcp
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: hello-gcp
  type: NodePort
